fix: mobile add contact fixed spacing

--- a/src/app/components/contact-add-form/contact-add-form.scss
+++ b/src/app/components/contact-add-form/contact-add-form.scss
@@ -30,6 +30,14 @@
 }
 
 @media (max-width: 992px) {
+  .modal-content-area {
+    margin-top: 3rem;
+  }
+
+  .modal-content-area ::ng-deep app-input-field .errorMessage {
+    min-height: 0;
+  }
+
   .contact-avatar {
     position: absolute;
     top: -50px;
